# Fake-News-Detection-Using-Machine-Learning

./: .gitignore  Dockerfile  Fake News Detection Using Machine Learning.ipynb  Makefile  README.md  Repository structure  app.py  config.py  data.py  evaluate.py  features.py  infer.py  models.py  pyproject.toml  requirements.txt  streamlit_app.py  test_train_pipeline.py  train.py  utils.py
